force-app/main/default/objects/Hierarchy_Source__mdt/Hierarchy_Source__mdt.object-meta.xml
<CustomObject>
    <description>Hierarchy source configuration for forecast participant sync</description>
    <label>Hierarchy Source</label>
    <pluralLabel>Hierarchy Sources</pluralLabel>
</CustomObject>