force-app/main/default/objects/Hierarchy_Source__mdt/fields/Level_Count__c.field-meta.xml
<CustomField>
    <fullName>Level_Count__c</fullName>
    <label>Level Count</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>