force-app/main/default/objects/Hierarchy_Source__mdt/fields/Level_Labels__c.field-meta.xml
<CustomField>
    <fullName>Level_Labels__c</fullName>
    <label>Level Labels</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>