force-app/main/default/objects/Hierarchy_Source__mdt/fields/Role_to_Level_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Role_to_Level_Mapping__c</fullName>
    <label>Role to Level Mapping</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>