force-app/main/default/objects/Hierarchy_Source__mdt/fields/Scope_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Scope_Field_API_Name__c</fullName>
    <label>Scope Field API Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>