force-app/main/default/objects/Hierarchy_Source__mdt/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>RoleHierarchy</fullName><default>false</default><label>RoleHierarchy</label></value>
            <value><fullName>TerritoryManagement</fullName><default>false</default><label>TerritoryManagement</label></value>
            <value><fullName>ManagerChain</fullName><default>false</default><label>ManagerChain</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>