force-app/main/default/objects/Hierarchy_Source__mdt/fields/Sync_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Sync_Frequency__c</fullName>
    <label>Sync Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Realtime</fullName><default>false</default><label>Realtime</label></value>
            <value><fullName>Daily</fullName><default>false</default><label>Daily</label></value>
            <value><fullName>Manual</fullName><default>false</default><label>Manual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>