force-app/main/default/objects/Hierarchy_Source__mdt/fields/Territory_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory_Model_Id__c</fullName>
    <label>Territory Model Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>